--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "_reset";
 @import "_variables";
+@import "_animate";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
