--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -16,18 +16,32 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400|Open+Sans:300italic,400|Raleway:200,700' rel='stylesheet' type='text/css'>
     <script src="{{ site.baseurl }}/js/vendor/modernizr-2.6.2.min.js"></script>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
     <body id="top">
+        <nav>
+            <ul>
+                <li><a href="#top"><img src="images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
+                <li><a href="#works">Works</a>
+                <li><a href="#skills">Skills</a>
+                <li><a href="#contact">Contact</a>
+                <li><a href="#about">About</a>
+            </ul>
+        </nav>
+
+        <div id="content">
+            <h1>Heading 1 Sample</h1>
+            <h2>Heading 2 Sample</h2>
+            <h3>Heading 3 Sample</h3>                    
+            <h4>Heading 4 Sample</h4>
+        </div>
 
 
-            <div id="content">
-
-            </div>
             <footer>
                 <div class="wow zoomInUp">
-                    <img src="images/cf_logo_tiny.svg" width="32px" height="32px" ><br>
+                    <img src="images/cf_logo_tiny.svg" width="32px" height="32px" >
                     <span>&copy; 2014 Charlie Fox</span>
                 </div>
             </footer>
