--- a/style.scss
+++ b/style.scss
@@ -14,14 +14,27 @@
 /* BASE RULES */
 /**************/
 
-html {
-  font-size: 100%;
+html, body {
+    height:100%;
+    padding:0;
+    margin:0;   
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  font: 100%/1.5 'Open Sans', sans-serif;
+  font-weight: 400;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  color: #555;
+  background: $offwhite;  
+
+  @include tablet {
+    font-size: 110%;
+  }
+
+  @include desktop {
+    font-size: 120%;
+  }
 }
 
 .container {
@@ -31,38 +44,37 @@ body {
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
-  font-weight: bold;
+
   
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
-
-  @include mobile {
-    line-height: 1.4;
-  }
-}
-  
-h1 {  
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
+h1 {
+    margin: 0;
+    padding: 1rem;
+    font: 300%/1 $raleway;
+    font-weight: 200;
+    color: $navy;
 }
 
-h2 {  
-  font-size: 24px;
+h2 {
+    font-size: 110%;
+    font-style: italic;
+    font-weight: 300;
+    margin: 0;
+    padding: 1rem;
+    color: $gray;
 }
 
-h3 {  
-  font-size: 20px;
+h3 {
+    font: 1.15em/1 $montserrat;
+    padding: 1rem;
+    margin: 0;
 }
 
-h4 {  
-  font-size: 18px;
-  color: $gray;
+h4 {
+    font: .7em/1 $montserrat;
+    color: $gray;
+    padding: 1rem;
+    margin: 0;
+    text-transform: uppercase;
 }
 
 p {
@@ -139,145 +151,114 @@ img {
 }
 
 /*********************/
-/* LAYOUT / SECTIONS */
+/* NAVIGATION        */
 /*********************/
 
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-  
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue; 
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-  
-  @include mobile {
-    margin: 3px 0;
-  }
-}
 
 nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue; 
-  font-size: 18px;
-  
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+    display: table;
+    height: 65px;
+    position: fixed;
+    top: 0;
+    left: 0;    
+    background: $navy;
+    width: 100%;    
+    -webkit-transform: translateZ(0);
+    box-sizing: content-box;
 
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+    @include tablet {
+        position: absolute;
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
+        border-bottom: 1px solid #eee;    
+        border-top: 5px solid #00111C;    
+        background: #fff;
+        top: auto;        
     }
-  }
+
+    ul {
+        display: table-cell;
+        vertical-align: middle;
+        margin: 0;
+        padding: 0;
+    }
+
+    li {
+        display: inline-block;
+        margin: 0 .4rem;
+        
+        text-align: center;
+
+        @include tablet {
+            text-align: left;
+            margin: 0 1rem;
+        }
+
+        a {
+            font-weight: 400;
+            font-size: .7em;
+            padding: 0;
+            margin:0;
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            transition: all .4s ease;
+
+            @include tablet {
+                color: #00111C;
+                font-family: 'Montserrat', sans-serif;
+            }
+
+            .curent {
+                color: red;
+            }
+
+            img {
+                height: 45px;
+                width: 45px;
+                vertical-align: middle;
+                transition: all .25s ease;                
+            }
+        }
+    }  
 }
 
-//
-// .main
-//
 
-.posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+
+
+
+/*********************/
+/* LAYOUT / SECTIONS */
+/*********************/
+#content {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
-.posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
-}
-
-.post { 
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
-
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-}
-
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
 
 footer {
-  padding: 20px 0;
-  text-align: center;
+  min-height: 150px;
+  display: table;
+  width: 100%;
 }
+
+footer div {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  color: $gray;
+  font-size: .5em;
+}
+
+footer div span {
+  display: block;
+  line-height: 2em;
+}
+
+
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
