--- a/style.scss
+++ b/style.scss
@@ -165,12 +165,11 @@ nav {
     width: 100%;    
     -webkit-transform: translateZ(0);
     box-sizing: content-box;
+    border-top: 5px solid #00111C;
 
     @include tablet {
-        position: absolute;
-
-        border-bottom: 1px solid #eee;    
-        border-top: 5px solid #00111C;    
+        position: absolute;  
+        border-bottom: 1px solid #eee;   
         background: #fff;
         top: auto;        
     }
@@ -222,8 +221,16 @@ nav {
     }  
 }
 
+nav.with_hero {
+    bottom: 0;
+}
 
-
+nav.f_nav {
+    position: sticky;
+    position: fixed;
+    top: 0;
+    z-index: 200;    
+}
 
 
 /*********************/
@@ -233,6 +240,28 @@ nav {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
+
+    div {
+        min-height: 500px;
+    }
+}
+
+
+
+#hero {
+    background: #22618c url('../images/dots.png') center top;
+    width: 100%;
+    height: 100%;
+    min-height: 275px;
+    border-bottom: 5px solid #00111C;
+    display: table;
+}
+
+#hero div.logo {
+    display: table-cell;
+    vertical-align: middle;    
+    text-align: center;
+    width: 100%;
 }
 
 
