--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -23,7 +23,14 @@
     <body id="top">
 
         <div id="hero">
-        
+            <div class="logo">
+                <img src="images/cf_logo_big.svg" class="logo wow rotateIn">
+                <h1 class="wow fadeIn" data-wow-delay=".25s">Charlie Fox</h1>
+                <h2 class="wow fadeIn" data-wow-delay=".5s">Web & User Interface Designer</h2>
+                <div id="social_block" class="social fadeIn" data-wow-delay=".6s">
+                    <a href="#"><i class="fa fa-github"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
+                </div> 
+            </div>
         </div>
         <nav class="with_hero">
             <ul>
