--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -34,11 +34,11 @@
         </div>
         <nav class="with_hero">
             <ul>
-                <li><a href="#top"><img src="{{ site.baseurl }}/images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
-                <li><a href="#works">Works</a>
-                <li><a href="#skills">Skills</a>
-                <li><a href="#contact">Contact</a>
-                <li><a href="#about">About</a>
+                <li><a href="#top"><div><i class="fa fa-home fa-2x home"></i>Home</div><img src="{{ site.baseurl }}/images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
+                <li><a href="#works"><i class="fa fa-picture-o fa-2x"></i>Works</a>
+                <li><a href="#skills"><i class="fa fa-paper-plane-o fa-2x"></i>Skills</a>
+                <li><a href="#contact"><i class="fa fa-envelope-o fa-2x"></i>Contact</a>
+                <li><a href="#about"><i class="fa fa-user fa-2x"></i>About</a>
             </ul>
         </nav>
 
