--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,7 @@ nav {
     display: table;
     height: $mh;
     position: fixed;
+    position: sticky;
     top: 0;
     left: 0;    
     background: $navy;
