--- a/style.scss
+++ b/style.scss
@@ -161,8 +161,8 @@ nav {
     height: $mh;
     position: fixed;
     position: sticky;
-    top: 0;
-    left: 0;    
+    top: 0px;
+    left: 0px;    
     background: $navy;
     width: 100%;    
     -webkit-transform: translateZ(0);
