--- a/style.scss
+++ b/style.scss
@@ -157,17 +157,18 @@ img {
 
 
 nav {
-    display: table;
+
     height: $mh;
     position: fixed;
-    position: sticky;
-    top: 0px;
-    left: 0px;    
+
+    top: 0;
+    left: 0;    
     background: $navy;
     width: 100%;    
-
+    -webkit-transform: translateZ(0);
     box-sizing: content-box;
     border-top: none;
+    transition: background .3s ease;
     border-bottom: 1px solid $navy;
 
     @include tablet {
