--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -32,7 +32,7 @@
                 </div> 
             </div>
         </div>
-        <nav class="with_hero">
+        <nav class="with_hero noBounce">
             <ul>
                 <li><a href="#top"><div><i class="fa fa-home fa-2x home"></i>Home</div><img src="{{ site.baseurl }}/images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
                 <li><a href="#works"><i class="fa fa-picture-o fa-2x"></i>Works</a>
@@ -79,7 +79,9 @@
             </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-
-
+        <script src="{{ site.baseurl }}/js/vendor/jquery.singlePageNav.min.js"></script>
+        <script src="{{ site.baseurl }}/js/vendor/wow.min.js"></script>
+        <script src="{{ site.baseurl }}/js/plugins.js"></script>
+        <script src="{{ site.baseurl }}/js/main.js"></script>
     </body>
 </html>
