--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,7 @@ body {
   -webkit-font-smoothing: antialiased;
   color: $darkGray;
   background: $offwhite;  
+  overflow: hidden;
 
   @include tablet {
     font-size: 110%;
