--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -79,9 +79,10 @@
             </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-
+        <script src="{{ site.baseurl }}/js/vendor/jquery.singlePageNav.min.js"></script>
         <script src="{{ site.baseurl }}/js/vendor/wow.min.js"></script>
-
+        <script src="{{ site.baseurl }}/js/plugins.js"></script>
+        <script src="{{ site.baseurl }}/js/main.js"></script>
 
 
     </body>
