--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,11 @@
 /* BASE RULES */
 /**************/
 
-
+html, body {
+    height:100%;
+    padding:0;
+    margin:0;   
+}
 
 body {
   font: 100%/1.5 'Open Sans', sans-serif;
@@ -156,6 +160,7 @@ img {
 nav {
     height: $mh;
     position: fixed;
+    position: sticky;
     top: 0;
     left: 0;    
     background: $navy;
