--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -33,7 +33,13 @@
             </div>
         </div>
         <nav class="with_hero noBounce">
-
+            <ul>
+                <li><a href="#top"><div><i class="fa fa-home fa-2x home"></i>Home</div><img src="{{ site.baseurl }}/images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
+                <li><a href="#works"><i class="fa fa-picture-o fa-2x"></i>Works</a>
+                <li><a href="#skills"><i class="fa fa-paper-plane-o fa-2x"></i>Skills</a>
+                <li><a href="#contact"><i class="fa fa-envelope-o fa-2x"></i>Contact</a>
+                <li><a href="#about"><i class="fa fa-user fa-2x"></i>About</a>
+            </ul>
         </nav>
 
         <div id="content">
