--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -32,7 +32,7 @@
                 </div> 
             </div>
         </div>
-        <nav>
+        <nav class="with_hero">
             <ul>
                 <li><a href="#top"><div><i class="fa fa-home fa-2x home"></i>Home</div><img src="{{ site.baseurl }}/images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
                 <li><a href="#works"><i class="fa fa-picture-o fa-2x"></i>Works</a>
