--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -27,9 +27,11 @@
                 <img src="images/cf_logo_big.svg" class="logo wow rotateIn">
                 <h1 class="wow fadeIn" data-wow-delay=".25s">Charlie Fox</h1>
                 <h2 class="wow fadeIn" data-wow-delay=".5s">Web & User Interface Designer</h2>
-                <div id="social_block" class="social fadeIn" data-wow-delay=".6s">
-                    <a href="#"><i class="fa fa-github"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-                </div> 
+                <div class="socials">
+                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-behance"></i></i></a>
+                </div>
             </div>
         </div>
         <nav class="with_hero">
@@ -40,6 +42,11 @@
                 <li><a href="#contact"><i class="fa fa-envelope-o fa-2x"></i>Contact</a>
                 <li><a href="#about"><i class="fa fa-user fa-2x"></i>About</a>
             </ul>
+            <div class="socials">
+                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-behance"></i></i></a>
+            </div>
         </nav>
 
         <div id="content">
