--- a/style.scss
+++ b/style.scss
@@ -80,7 +80,7 @@ h4 {
 }
 
 p {
-  margin: 15px 0;
+  margin: 0;
 }
 
 a {
@@ -170,15 +170,13 @@ nav {
     border-top: none;
     border-bottom: 1px solid $navy;
 
-
     @include tablet {
         position: absolute;  
-        top: 0;
+        top: auto;
         left: 0;
         border-top: 5px solid $navy;
         border-bottom: 1px solid $lightGray;   
-        background: $white;
-        top: auto;        
+        background: $white;     
     }
 
     ul {
