--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -28,9 +28,9 @@
                 <h1 class="wow fadeIn" data-wow-delay=".25s">Charlie Fox</h1>
                 <h2 class="wow fadeIn" data-wow-delay=".5s">Web & User Interface Designer</h2>
                 <div class="socials">
-                    <a href="#"><i class="fa fa-github"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-behance"></i></i></a>
+                    <a href="#"><i class="fa fa-github wow fadeIn" data-wow-delay=".6s"></i></a>
+                    <a href="#"><i class="fa fa-twitter wow fadeIn" data-wow-delay=".7s"></i></a>
+                    <a href="#"><i class="fa fa-behance wow fadeIn" data-wow-delay=".8s"></i></i></a>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
                 <li><a href="#contact"><i class="fa fa-envelope-o fa-2x"></i>Contact</a>
                 <li><a href="#about"><i class="fa fa-user fa-2x"></i>About</a>
             </ul>
-            <div class="socials">
+            <div class="socials wow fadeIn">
                 <a href="#"><i class="fa fa-github"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-behance"></i></i></a>
