--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -25,10 +25,10 @@
         <nav>
             <ul>
                 <li><a href="{{ site.baseurl }}/"><div><i class="fa fa-home fa-2x home"></i>Home</div><img src="{{ site.baseurl }}/images/cf_logo.svg" width="45" height="45" alt="Charlie Fox" title="Charlie Fox"></a>
-                <li><a href="{{ site.baseurl }}/"><i class="fa fa-picture-o fa-2x"></i>Works</a>
-                <li><a href="{{ site.baseurl }}/"><i class="fa fa-paper-plane-o fa-2x"></i>Skills</a>
-                <li><a href="{{ site.baseurl }}/"><i class="fa fa-envelope-o fa-2x"></i>Contact</a>
-                <li><a href="{{ site.baseurl }}/"><i class="fa fa-user fa-2x"></i>About</a>
+                <li><a href="{{ site.baseurl }}/#works"><i class="fa fa-picture-o fa-2x"></i>Works</a>
+                <li><a href="{{ site.baseurl }}/#skills"><i class="fa fa-paper-plane-o fa-2x"></i>Skills</a>
+                <li><a href="{{ site.baseurl }}/#contact"><i class="fa fa-envelope-o fa-2x"></i>Contact</a>
+                <li><a href="{{ site.baseurl }}/#about"><i class="fa fa-user fa-2x"></i>About</a>
             </ul>
             <div class="socials">
                 <a href="http://www.github.com/webartificer"><i class="fa fa-github"></i></a>
@@ -51,7 +51,6 @@
             </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-        <script src="{{ site.baseurl }}/js/vendor/jquery.singlePageNav.min.js"></script>
         <script src="{{ site.baseurl }}/js/vendor/wow.min.js"></script>
         <script src="{{ site.baseurl }}/js/plugins.js"></script>
         <script src="{{ site.baseurl }}/js/main.js"></script>
