--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -51,10 +51,7 @@
 
         <div id="content">
             <div id="works">
-                <h1>Works</h1>
-                <h2>Heading 2 Sample</h2>
-                <h3>Heading 3 Sample</h3>                    
-                <h4>Heading 4 Sample</h4>
+                {% include portfolio_section.html %}
             </div>
             <div id="skills">
                 <h1>Skills</h1>
