--- a/style.scss
+++ b/style.scss
@@ -418,10 +418,15 @@ nav .socials {
     width: 100%;
 }
 
+
+
 .column {
-    float: left;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+
+    @include desktop {
+        float: left;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
 }
 
 .column img {
@@ -430,7 +435,11 @@ nav .socials {
 
 .column.full { width: 100%; }
 .column.two-thirds { width: 66.7%; }
-.column.half { width: 50%; }
+.column.half { 
+    @include desktop {
+        width: 50%; 
+    }
+}
 .column.third { width: 33.3%; }
 .column.fourth { width: 25%; }
 .column.eighth { width: 12.5%; }
