--- a/style.scss
+++ b/style.scss
@@ -67,14 +67,14 @@ h2 {
 
 h3 {
     font: 1.15em/1 $montserrat;
-    padding: 1rem 0;
+    padding: 1rem 0 0;
     margin: 0;
 }
 
 h4 {
     font: .7em/1 $montserrat;
     color: $gray;
-    padding: 1rem 0;
+    padding: .5rem 0;
     margin: 0;
     text-transform: uppercase;
 }
