--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -53,17 +53,15 @@
             <div id="works">
                 {% include portfolio_section.html %}
             </div>
+
+
             <div id="skills">
-                <h1>Skills</h1>
-                <h2>Heading 2 Sample</h2>
-                <h3>Heading 3 Sample</h3>                    
-                <h4>Heading 4 Sample</h4>
+                {% include skills_section.html %}             
+            </div>
+
             </div>
             <div id="contact">
-                <h1>Contact</h1>
-                <h2>Heading 2 Sample</h2>
-                <h3>Heading 3 Sample</h3>                    
-                <h4>Heading 4 Sample</h4>
+                {% include contact_section.html %}
             </div>
             <div id="about">
                 <h1>About</h1>
