--- a/style.scss
+++ b/style.scss
@@ -50,10 +50,15 @@ body {
   
 h1 {
     margin: 0;
-    padding: 2em 0 0;
+    padding: 1.5em 0 0;
     font: 300%/1 $raleway;
     font-weight: 200;
     color: $navy;
+
+    strong {
+        font-weight: 200;
+        color: $blue;
+    }
 }
 
 h2 {
@@ -354,10 +359,17 @@ nav .socials {
 
 
 #content {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
+    width: 100%;
 
+}
+
+#works, #skills {
+    padding-bottom: 2em;
+    border-bottom: 1px solid $lightGray;
+}
+
+#skills {
+    background: $white;
 }
 
 #hero {
@@ -421,11 +433,11 @@ nav .socials {
 
 
 .column {
+    padding: 0rem;
 
     @include desktop {
         float: left;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
+        padding: 0 1.5rem;
     }
 }
 
@@ -448,7 +460,10 @@ nav .socials {
 .column.flow-opposite { float: right; } 
 
 .row {
-    padding: 1rem 0;
+    padding: .5rem 0 2rem;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;    
 }
 
 footer {
@@ -498,6 +513,88 @@ a.button, .button {
 a.button:hover, .button:hover {
     color:$blue;
     background: $white;
+
+}
+
+.skill {
+    display: block;
+    margin-top: 1em;
+    padding-bottom: .5em;
+}
+
+
+.skill * {
+    margin-left: 95px;
+}
+
+.design {
+    background: url('../images/service-design.svg') -.25em 1em no-repeat;
+}
+.development {
+    background: url('../images/service-development.svg') -.25em 1em no-repeat;
+}
+.hosting {
+    background: url('../images/service-hosting.svg') -.25em 1em no-repeat;
+}
+.ecommerce {
+    background: url('../images/service-ecommerce.svg') -.25em 1em no-repeat;
+}
+.tuition {
+    background: url('../images/service-tuition.svg') -.25em 1em no-repeat;
+}
+.apps {
+    background: url('../images/service-apps.svg') -.25em 1em no-repeat;
+}
+
+/* Basic Grey */
+.basic-grey {
+    padding-top: 1em;
+    margin: auto;
+}
+
+.basic-grey label {
+    display: block;
+    margin: 0px;
+}
+.basic-grey label>span {
+    display: none;
+    float: left;
+    width: 20%;
+    text-align: right;
+    padding-right: 10px;
+    margin-top: 10px;
+    color: $gray;
+}
+.basic-grey input[type="text"], .basic-grey input[type="email"], .basic-grey textarea, .basic-grey select {
+    border: 1px solid #ddd;
+    color: $gray;
+    height: 55px;
+    margin-bottom: 16px;
+    margin-right: 6px;
+    outline: 0 none;
+    padding: 4px 4px 0 15px;
+    width: 100%;
+    font: 1em/1.5 $openSans;
+
+}
+
+.basic-grey input[type="text"]:focus, .basic-grey input[type="email"]:focus, .basic-grey textarea:focus {
+    border: 1px solid $blue;
+}
+
+.basic-grey textarea{
+    padding: 12px 4px 4px 15px;
+    height:200px;
+}
+
+.inquire {
+    margin-top: 2em;
+    @include desktop {
+        margin-left: 2em;
+        display: block;
+        margin-top: 0;
+        padding-bottom: .5em;            
+    }
 
 }
 
