--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -64,10 +64,7 @@
                 {% include contact_section.html %}
             </div>
             <div id="about">
-                <h1>About</h1>
-                <h2>Heading 2 Sample</h2>
-                <h3>Heading 3 Sample</h3>                    
-                <h4>Heading 4 Sample</h4>
+                {% include about_section.html %}
             </div>
 
         </div>
