--- a/style.scss
+++ b/style.scss
@@ -332,6 +332,20 @@ nav .socials {
     }
 }
 
+#about .socials {
+    
+    position: relative;
+    display: block;
+    right: 0;
+    padding: 0;
+    margin: 0;
+        
+
+    a {
+        line-height: 1em;
+    }
+}
+
 .logo .socials {
     
     position: relative;
@@ -363,12 +377,12 @@ nav .socials {
 
 }
 
-#works, #skills {
+#works, #skills, #about, #contact {
     padding-bottom: 2em;
     border-bottom: 1px solid $lightGray;
 }
 
-#skills {
+#skills, #about {
     background: $white;
 }
 
@@ -430,6 +444,31 @@ nav .socials {
     width: 100%;
 }
 
+#project {
+    h1 {
+        padding-top: 2.5em;
+    }
+
+    h3 {
+        display: inline-block;
+        @include desktop {
+            display: block;
+            background: $navy;
+            color: $white;
+            padding: 1rem .5rem;
+            margin-top: 1em;
+            font: .8em/1 $montserrat;
+            text-transform: uppercase;       
+        }
+        &:after {
+            content: ':';
+
+            @include desktop {
+                content: '';
+            }
+        }
+    }
+}
 
 
 .column {
@@ -453,10 +492,20 @@ nav .socials {
     }
 }
 .column.third { width: 33.3%; }
-.column.fourth { width: 25%; }
+.column.fourth {
+
+    @include desktop {
+        width: 25%; 
+      
+    }
+}   
 .column.eighth { width: 12.5%; }
 .column.seven-eighths { width: 87.5%; }
-.column.three-fourths { width: 75%; }
+.column.three-fourths { 
+    @include desktop {
+        width: 75%; 
+    }
+}
 .column.flow-opposite { float: right; } 
 
 .row {
@@ -596,6 +645,105 @@ a.button:hover, .button:hover {
         padding-bottom: .5em;            
     }
 
+}
+
+.photo {
+    background: $lightGray;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: 1em auto;
+    float: left;
+
+    @include desktop {
+        float: none;
+        width: 150px;
+        height: 150px;
+    }
+
+    img {
+        margin: 0;
+        padding: 0;
+    }
+
+}
+
+.aboutDetails {
+
+    margin: 1em 0 0 1em;
+    float: left;
+    @include desktop {
+        float: none;
+        margin: 0;
+        text-align: center;
+    }
+
+    .button {
+
+        font-size: .75em;
+
+
+        @include desktop {
+            float: none;
+        }
+    }
+}
+
+
+.projectDetails {
+
+    ul {
+        display: inline;
+        padding: 0 0 1em 0;
+        margin: 0;
+
+        @include desktop {
+            list-style: none;
+            
+        }
+    }
+
+    li {
+        display: inline;
+        padding: .5rem 0;
+        margin: .5rem 0;
+        font-size: .9em;
+        color: $gray;
+
+        &:before {
+            content: '|';
+            @include desktop {
+                content: none;
+            }
+        }
+
+        &:first-child {
+            &:before {
+                content: none;           
+            }
+        }
+          
+
+        @include desktop {
+            display: block;
+            padding: .5rem;
+            background: $lightGray;
+            text-transform: uppercase;
+            font: .7em/1 $montserrat;
+                  
+        }
+    }
+
+    .button {
+        font-size: .75em;
+        display: block;
+        text-align: center;
+        margin-top: 3em;
+    }
+}
+
+#disqus_thread {
+    padding-top: 4em;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
