--- a/style.scss
+++ b/style.scss
@@ -236,6 +236,7 @@ nav {
 
             &.current {
                 background: $ltnavy;
+                color: $blue;
 
                 @include tablet {
                   background: none;
