--- a/style.scss
+++ b/style.scss
@@ -228,9 +228,11 @@ nav {
 
             &:hover {
                 background: $ltnavy;
+                color: $white;
 
                 @include tablet {
                   background: none;
+                  color: $blue;
                 }
             }
 
